--- a/app/templates/component/navbar.html
+++ b/app/templates/component/navbar.html
@@ -216,11 +216,11 @@ document.getElementById('navbarMenu').classList.toggle('is-active');
 
       <div class="block">
         <p>$navbar-dropdown-item-color: $text;</p>
-        <p>$navbar-item-hover-color: $link; <span class="has-text-grey-light">// created by Bulma</span></p>
-        <p>$navbar-item-hover-background-color: $white-bis; <span class="has-text-grey-light">// created by Bulma</span>
+        <p>$navbar-item-hover-color: $link; <span class="text-grey-light">// created by Bulma</span></p>
+        <p>$navbar-item-hover-background-color: $white-bis; <span class="text-grey-light">// created by Bulma</span>
         </p>
-        <p>$navbar-dropdown-item-hover-color: $black; <span class="has-text-grey-light">// created by Bulma</span></p>
-        <p>$navbar-dropdown-item-hover-background-color: $background; <span class="has-text-grey-light">// created by
+        <p>$navbar-dropdown-item-hover-color: $black; <span class="text-grey-light">// created by Bulma</span></p>
+        <p>$navbar-dropdown-item-hover-background-color: $background; <span class="text-grey-light">// created by
             Bulma</span></p>
       </div>
     </div>
