--- a/app/templates/element/badge-corner.html
+++ b/app/templates/element/badge-corner.html
@@ -61,7 +61,7 @@
                 data-badge="1">
           Button
         </button>
-        <span class="badge-corner has-text-size-large is-margin-left"
+        <span class="badge-corner push-left-2"
               data-badge="2 ">
           Text
         </span>
@@ -103,7 +103,7 @@
         <p>$badge-corner-font-size: $size-normal;</p>
         <p>$badge-corner-background-color: $grey;</p>
         <p>$badge-corner-box-shadow: 0 0 0 .2rem #fff;</p>
-        <p>$badge-corner-border-radius: 1rem;</p>
+        <p>$badge-corner-border-radius: $radius-rounded;</p>
       </div>
 
     </div>
