--- a/app/templates/element/box.html
+++ b/app/templates/element/box.html
@@ -141,7 +141,7 @@
 
       <div class="block">
         <p>$box-hightlight-color: $primary;</p>
-        <p>$box-radius: $radius-large; <span class="has-text-grey-light">// created by Bulma</span></p>
+        <p>$box-radius: $radius-large; <span class="text-grey-light">// created by Bulma</span></p>
       </div>
 
     </div>
