--- a/app/templates/element/icon.html
+++ b/app/templates/element/icon.html
@@ -81,12 +81,12 @@
       </div>
 
       <div class="block">
-        <div class="has-text-size-large">
+        <div class="text-size-large">
           <span class="icon icon-em"><i class="fa fa-home"></i></span><span>Large Font Size Text</span>
         </div>
         <script type="text/plain"
                 class="language-markup">
-<div class="has-text-size-large">
+<div class="text-size-large">
   <span class="icon icon-em">
     <i class="fa fa-home"></i>
   </span>
@@ -154,7 +154,7 @@
           Size: is-small, is-medium, is-large
         </div>
         <div class="block">
-          <div class="has-text-size-large">
+          <div class="text-size-large">
             <span class="icon icon-em is-small"><i class="fa fa-home"></i></span>
             <span class="icon icon-em is-medium"><i class="fa fa-home"></i></span>
             <span class="icon icon-em is-large"><i class="fa fa-home"></i></span>
@@ -176,19 +176,19 @@
 
       <div class="block">
         <div class="block">
-          Color: has-text-[color]
+          Color: text-[color]
         </div>
         <div class="block">
-          <div class="has-text-size-large">
-            <span class="icon icon-em has-text-primary"><i class="fa fa-home"></i></span>
-            <span class="icon icon-em has-text-secondary"><i class="fa fa-home"></i></span>
+          <div class="text-size-large">
+            <span class="icon icon-em text-primary"><i class="fa fa-home"></i></span>
+            <span class="icon icon-em text-secondary"><i class="fa fa-home"></i></span>
           </div>
           <script type="text/plain"
                   class="language-markup">
-<span class="icon icon-em has-text-primary">
+<span class="icon icon-em text-primary">
   <i class="fa fa-home"></i>
 </span>
-<span class="icon icon-em has-text-secondary">
+<span class="icon icon-em text-secondary">
   <i class="fa fa-home"></i>
 </span>
             </script>
@@ -200,12 +200,12 @@
           icon-img
         </div>
         <div class="block">
-          <div class="has-text-size-medium">
+          <div class="text-size-medium">
             <span class="icon icon-em icon-img"><img src="../../assets/images/coin.png"></span><span>Image Icon</span>
           </div>
           <script type="text/plain"
                   class="language-markup">
-<div class="has-text-size-medium">
+<div class="text-size-medium">
   <span class="icon icon-em icon-img">
     <img src="../../assets/images/coin.png">
   </span>
