--- a/app/templates/form/checkbox.html
+++ b/app/templates/form/checkbox.html
@@ -138,10 +138,10 @@
 
       <div class="block">
         <div class="block">
-          checkbox-group is-inline-group
+          checkbox-group is-horizontal
         </div>
         <div class="block">
-          <div class="checkbox-group is-inline-group">
+          <div class="checkbox-group is-horizontal">
             <div class="checkbox-title">
               checkbox title
             </div>
@@ -157,7 +157,7 @@
         </div>
         <script type="text/plain"
                 class="language-markup">
-<div class="checkbox-group is-inline-group">
+<div class="checkbox-group is-horizontal">
   <div class="checkbox-title">
     checkbox title
   </div>
@@ -175,10 +175,10 @@
 
       <div class="block">
         <div class="block">
-          checkbox-group is-inline-group has-divide
+          checkbox-group is-horizontal has-divide
         </div>
         <div class="block">
-          <div class="checkbox-group is-inline-group has-divide">
+          <div class="checkbox-group is-horizontal has-divide">
             <div class="checkbox-title">
               checkbox title
             </div>
@@ -194,7 +194,7 @@
         </div>
         <script type="text/plain"
                 class="language-markup">
-<div class="checkbox-group is-inline-group has-divide">
+<div class="checkbox-group is-horizontal has-divide">
   <div class="checkbox-title">
     checkbox title
   </div>
@@ -212,10 +212,10 @@
 
       <div class="block">
         <div class="block">
-          checkbox-group is-inline-group is-bordered
+          checkbox-group is-horizontal is-bordered
         </div>
         <div class="block">
-          <div class="checkbox-group is-inline-group is-bordered">
+          <div class="checkbox-group is-horizontal is-bordered">
             <div class="checkbox-title">
               checkbox title
             </div>
@@ -231,7 +231,7 @@
         </div>
         <script type="text/plain"
                 class="language-markup">
-<div class="checkbox-group is-inline-group is-bordered">
+<div class="checkbox-group is-horizontal is-bordered">
   <div class="checkbox-title">
     checkbox title
   </div>
@@ -252,7 +252,7 @@
           checkbox-title is-filled
         </div>
         <div class="block">
-          <div class="checkbox-group is-inline-group is-bordered">
+          <div class="checkbox-group is-horizontal is-bordered">
             <div class="checkbox-title is-filled">
               checkbox title
             </div>
@@ -268,7 +268,7 @@
         </div>
         <script type="text/plain"
                 class="language-markup">
-<div class="checkbox-group is-inline-group has-divide">
+<div class="checkbox-group is-horizontal has-divide">
   <div class="checkbox-title is-filled">
     checkbox title
   </div>
@@ -286,10 +286,10 @@
 
       <div class="block">
         <div class="block">
-          checkbox-group is-inline-group is-bordered is-[color]
+          checkbox-group is-horizontal is-bordered is-[color]
         </div>
         <div class="block">
-          <div class="checkbox-group is-inline-group is-bordered is-primary">
+          <div class="checkbox-group is-horizontal is-bordered is-primary">
             <div class="checkbox-title is-filled">
               checkbox title
             </div>
@@ -305,7 +305,7 @@
         </div>
         <script type="text/plain"
                 class="language-markup">
-<div class="checkbox-group is-inline-group is-bordered has-primary">
+<div class="checkbox-group is-horizontal is-bordered has-primary">
   <div class="checkbox-title is-filled">
     checkbox title
   </div>
