--- a/app/templates/form/form.html
+++ b/app/templates/form/form.html
@@ -108,16 +108,7 @@
       </div>
       <div class="block">
         <div>
-          To vertical align label:
-        </div>
-        <div>
-          field-label is-normal (for input, select)
-        </div>
-        <div>
-          field-label is-small (for small input, small select)
-        </div>
-        <div>
-          field-label is-large (for large input, large select)
+          field-label is-[size] (for font-size)
         </div>
       </div>
       <div class="block">
@@ -127,9 +118,11 @@
               <label class="label">Name</label>
             </div>
             <div class="field-body">
-              <div class="control">
-                <input class="input"
-                       type="text">
+              <div class="field">
+                <div class="control">
+                  <input class="input"
+                         type="text">
+                </div>
               </div>
             </div>
           </div>
@@ -138,16 +131,18 @@
               <!-- Left empty for spacing -->
             </div>
             <div class="field-body">
-              <div class="control">
-                <button class="button is-primary">
-                  Save
-                </button>
-              </div>
-              <div class="control">
-                <button class="button is-text"
-                        type="button">
-                  Cancel
-                </button>
+              <div class="field is-grouped">
+                <div class="control">
+                  <button class="button is-primary">
+                    Save
+                  </button>
+                </div>
+                <div class="control">
+                  <button class="button is-text"
+                          type="button">
+                    Cancel
+                  </button>
+                </div>
               </div>
             </div>
           </div>
@@ -160,9 +155,11 @@
       <label class="label">Name</label>
     </div>
     <div class="field-body">
-      <div class="control">
-        <input class="input"
-                type="text">
+      <div class="field">
+        <div class="control">
+          <input class="input"
+                  type="text">
+        </div>
       </div>
     </div>
   </div>
@@ -171,16 +168,18 @@
       <!-- Left empty for spacing -->
     </div>
     <div class="field-body">
-      <div class="control">
-        <button class="button is-primary">
-          Save
-        </button>
-      </div>
-      <div class="control">
-        <button class="button is-text"
-                type="button">
-          Cancel
-        </button>
+      <div class="field is-grouped">
+        <div class="control">
+          <button class="button is-primary">
+            Save
+          </button>
+        </div>
+        <div class="control">
+          <button class="button is-text"
+                  type="button">
+            Cancel
+          </button>
+        </div>
       </div>
     </div>
   </div>
