--- a/app/templates/general/variables.html
+++ b/app/templates/general/variables.html
@@ -48,7 +48,10 @@
                   <h2 class="title is-6">Create Variables File</h2>
 
                   <div class="block">
-                        copy app/src/variables.sample.scss rename to variables.scss
+                        copy app/src/sample-variables.scss rename to variables.scss
+                  </div>
+                  <div class="block">
+                        copy app/src/sample-variables-config.scss rename to variables-config.scss
                   </div>
 
             </div>
