--- a/app/templates/shape/circle.html
+++ b/app/templates/shape/circle.html
@@ -70,12 +70,12 @@
         size = element font size
       </div>
       <div class="block">
-        <div class="has-text-size-large">
+        <div class="text-size-large">
           <div class="circle"></div>
         </div>
         <script type="text/plain"
                 class="language-markup">
-<div class="has-text-size-large">
+<div class="text-size-large">
   <div class="circle"></div>
 </div>
         </script>
