--- a/app/src/trunks.scss
+++ b/app/src/trunks.scss
@@ -4,13 +4,28 @@
 @import 'utilities/_all';
 
 // bulma utilities
-@import "~bulma/sass/utilities/initial-variables.sass";
-@import "~bulma/sass/utilities/derived-variables.sass";
-@import "~bulma/sass/utilities/animations.sass";
-@import "~bulma/sass/utilities/controls.sass";
+@import "~bulma/sass/utilities/initial-variables";
+// @import "~bulma/sass/utilities/functions"; // extend
+@import "~bulma/sass/utilities/derived-variables";
+@import "~bulma/sass/utilities/animations";
+// @import "~bulma/sass/utilities/mixins"; // extend
+@import "~bulma/sass/utilities/controls";
+
+// bulma base
+@import "~bulma/sass/base/_all";
+
+// bulma helpers
+// @import "~bulma/sass/helpers/color"; // rewrite
+// @import "~bulma/sass/helpers/flexbox"; // rewrite
+// @import "~bulma/sass/helpers/float"; // remove
+@import "~bulma/sass/helpers/other";
+// @import "~bulma/sass/helpers/overflow"; // rewrite
+@import "~bulma/sass/helpers/position";
+@import "~bulma/sass/helpers/spacing";
+// @import "~bulma/sass/helpers/typography"; // rewrite
+@import "~bulma/sass/helpers/visibility";
 
 // bulma others
-@import "~bulma/sass/base/_all";
 @import "~bulma/sass/elements/_all";
 @import "~bulma/sass/form/_all";
 @import "~bulma/sass/components/_all";
@@ -22,6 +37,7 @@
 
 // custom others
 @import 'base/_all';
+@import 'helpers/_all';
 @import 'layout/_all';
 @import 'element/_all';
 @import 'components/_all';
