--- a/app/src/utilities/variables-config.scss
+++ b/app/src/utilities/variables-config.scss
@@ -13,12 +13,20 @@ $column-gap: $block-spacing / 2 !default;
 $column-gap-mobile: $block-spacing-mobile / 2 !default;
 
 $tile-spacing: $block-spacing / 2 !default;
-$tile-spacing-mobile: $block-spacing / 2 !default;
+$tile-spacing-mobile: $block-spacing-mobile / 2 !default;
 
 $field-spacing: $block-spacing !default;
 $field-spacing-mobile: $block-spacing-mobile !default;
+$field-horizontal-spacing: $brick-spacing !default;
 
-$level-item-spacing: $block-spacing !default;
+$label-spacing: $brick-spacing !default;
+
+// Spacing
+$spacing-shortcuts: ("margin": "push", "padding": "pad");
+$spacing-directions: ("top": "-top", "right": "-right", "bottom": "-bottom", "left": "-left");
+$spacing-horizontal: "x";
+$spacing-vertical: "y";
+$spacing-values: ("0": 0, "1": $square-size, "2": $square-size * 2, "3": $square-size * 3, "4": $square-size * 4, "5": $square-size * 5, "6": $square-size * 6);
 
 // The section horizontal gap for desktop (in pixel)
 $section-gap: 24px !default;
