--- a/templates/element/box.html
+++ b/templates/element/box.html
@@ -13,4 +13,4 @@
 </div>
 <div class="box-detail">
   box-detail
-</div></script></div><h2 class="title is-6">Variable</h2><div class="block"><p>$box-hightlight-color: $primary;</p><p>$box-radius: $radius-large; <span class="has-text-grey-light">// created by Bulma</span></p></div></div></section><script src="../../assets/scripts/vendor.js"></script><script src="../../assets/scripts/main.js"></script></body></html>
+</div></script></div><h2 class="title is-6">Variable</h2><div class="block"><p>$box-hightlight-color: $primary;</p><p>$box-radius: $radius-large; <span class="text-grey-light">// created by Bulma</span></p></div></div></section><script src="../../assets/scripts/vendor.js"></script><script src="../../assets/scripts/main.js"></script></body></html>
