--- a/templates/element/icon.html
+++ b/templates/element/icon.html
@@ -4,7 +4,7 @@
 <span class="icon icon-em">
   <i class="fa fa-home"></i>
 </span>
-<span>Back Text</span></script></div><div class="block"><div class="has-text-size-large"><span class="icon icon-em"><i class="fa fa-home"></i></span><span>Large Font Size Text</span></div><script type="text/plain" class="language-markup"><div class="has-text-size-large">
+<span>Back Text</span></script></div><div class="block"><div class="text-size-large"><span class="icon icon-em"><i class="fa fa-home"></i></span><span>Large Font Size Text</span></div><script type="text/plain" class="language-markup"><div class="text-size-large">
   <span class="icon icon-em">
     <i class="fa fa-home"></i>
   </span>
@@ -31,7 +31,7 @@
       </a>
     </div>
   </div>
-</nav></script></div><h2 class="title is-6">Modifier</h2><div class="block"><div class="block">Size: is-small, is-medium, is-large</div><div class="block"><div class="has-text-size-large"><span class="icon icon-em is-small"><i class="fa fa-home"></i></span> <span class="icon icon-em is-medium"><i class="fa fa-home"></i></span> <span class="icon icon-em is-large"><i class="fa fa-home"></i></span></div><script type="text/plain" class="language-markup"><span class="icon icon-em is-small">
+</nav></script></div><h2 class="title is-6">Modifier</h2><div class="block"><div class="block">Size: is-small, is-medium, is-large</div><div class="block"><div class="text-size-large"><span class="icon icon-em is-small"><i class="fa fa-home"></i></span> <span class="icon icon-em is-medium"><i class="fa fa-home"></i></span> <span class="icon icon-em is-large"><i class="fa fa-home"></i></span></div><script type="text/plain" class="language-markup"><span class="icon icon-em is-small">
   <i class="fa fa-home"></i>
 </span>
 <span class="icon icon-em is-medium">
@@ -39,12 +39,12 @@
 </span>
 <span class="icon icon-em is-large">
   <i class="fa fa-home"></i>
-</span></script></div></div><div class="block"><div class="block">Color: has-text-[color]</div><div class="block"><div class="has-text-size-large"><span class="icon icon-em has-text-primary"><i class="fa fa-home"></i></span> <span class="icon icon-em has-text-secondary"><i class="fa fa-home"></i></span></div><script type="text/plain" class="language-markup"><span class="icon icon-em has-text-primary">
+</span></script></div></div><div class="block"><div class="block">Color: text-[color]</div><div class="block"><div class="text-size-large"><span class="icon icon-em text-primary"><i class="fa fa-home"></i></span> <span class="icon icon-em text-secondary"><i class="fa fa-home"></i></span></div><script type="text/plain" class="language-markup"><span class="icon icon-em text-primary">
   <i class="fa fa-home"></i>
 </span>
-<span class="icon icon-em has-text-secondary">
+<span class="icon icon-em text-secondary">
   <i class="fa fa-home"></i>
-</span></script></div></div><div class="block"><div class="block">icon-img</div><div class="block"><div class="has-text-size-medium"><span class="icon icon-em icon-img"><img src="../../assets/images/coin.png"></span><span>Image Icon</span></div><script type="text/plain" class="language-markup"><div class="has-text-size-medium">
+</span></script></div></div><div class="block"><div class="block">icon-img</div><div class="block"><div class="text-size-medium"><span class="icon icon-em icon-img"><img src="../../assets/images/coin.png"></span><span>Image Icon</span></div><script type="text/plain" class="language-markup"><div class="text-size-medium">
   <span class="icon icon-em icon-img">
     <img src="../../assets/images/coin.png">
   </span>
