--- a/templates/form/checkbox.html
+++ b/templates/form/checkbox.html
@@ -19,7 +19,7 @@
     <input type="checkbox">
     <span>check me</span>
   </label>
-</div></script></div><div class="block"><div class="block">checkbox-group is-inline-group</div><div class="block"><div class="checkbox-group is-inline-group"><div class="checkbox-title">checkbox title</div><label class="checkbox"><input type="checkbox"> <span>check me</span></label> <label class="checkbox"><input type="checkbox"> <span>check me</span></label></div></div><script type="text/plain" class="language-markup"><div class="checkbox-group is-inline-group">
+</div></script></div><div class="block"><div class="block">checkbox-group is-horizontal</div><div class="block"><div class="checkbox-group is-horizontal"><div class="checkbox-title">checkbox title</div><label class="checkbox"><input type="checkbox"> <span>check me</span></label> <label class="checkbox"><input type="checkbox"> <span>check me</span></label></div></div><script type="text/plain" class="language-markup"><div class="checkbox-group is-horizontal">
   <div class="checkbox-title">
     checkbox title
   </div>
@@ -31,7 +31,7 @@
     <input type="checkbox">
     <span>check me</span>
   </label>
-</div></script></div><div class="block"><div class="block">checkbox-group is-inline-group has-divide</div><div class="block"><div class="checkbox-group is-inline-group has-divide"><div class="checkbox-title">checkbox title</div><label class="checkbox"><input type="checkbox"> <span>check me</span></label> <label class="checkbox"><input type="checkbox"> <span>check me</span></label></div></div><script type="text/plain" class="language-markup"><div class="checkbox-group is-inline-group has-divide">
+</div></script></div><div class="block"><div class="block">checkbox-group is-horizontal has-divide</div><div class="block"><div class="checkbox-group is-horizontal has-divide"><div class="checkbox-title">checkbox title</div><label class="checkbox"><input type="checkbox"> <span>check me</span></label> <label class="checkbox"><input type="checkbox"> <span>check me</span></label></div></div><script type="text/plain" class="language-markup"><div class="checkbox-group is-horizontal has-divide">
   <div class="checkbox-title">
     checkbox title
   </div>
@@ -43,7 +43,7 @@
     <input type="checkbox">
     <span>check me</span>
   </label>
-</div></script></div><div class="block"><div class="block">checkbox-group is-inline-group is-bordered</div><div class="block"><div class="checkbox-group is-inline-group is-bordered"><div class="checkbox-title">checkbox title</div><label class="checkbox"><input type="checkbox"> <span>check me</span></label> <label class="checkbox"><input type="checkbox"> <span>check me</span></label></div></div><script type="text/plain" class="language-markup"><div class="checkbox-group is-inline-group is-bordered">
+</div></script></div><div class="block"><div class="block">checkbox-group is-horizontal is-bordered</div><div class="block"><div class="checkbox-group is-horizontal is-bordered"><div class="checkbox-title">checkbox title</div><label class="checkbox"><input type="checkbox"> <span>check me</span></label> <label class="checkbox"><input type="checkbox"> <span>check me</span></label></div></div><script type="text/plain" class="language-markup"><div class="checkbox-group is-horizontal is-bordered">
   <div class="checkbox-title">
     checkbox title
   </div>
@@ -55,7 +55,7 @@
     <input type="checkbox">
     <span>check me</span>
   </label>
-</div></script></div><div class="block"><div class="block">checkbox-title is-filled</div><div class="block"><div class="checkbox-group is-inline-group is-bordered"><div class="checkbox-title is-filled">checkbox title</div><label class="checkbox"><input type="checkbox"> <span>check me</span></label> <label class="checkbox"><input type="checkbox"> <span>check me</span></label></div></div><script type="text/plain" class="language-markup"><div class="checkbox-group is-inline-group has-divide">
+</div></script></div><div class="block"><div class="block">checkbox-title is-filled</div><div class="block"><div class="checkbox-group is-horizontal is-bordered"><div class="checkbox-title is-filled">checkbox title</div><label class="checkbox"><input type="checkbox"> <span>check me</span></label> <label class="checkbox"><input type="checkbox"> <span>check me</span></label></div></div><script type="text/plain" class="language-markup"><div class="checkbox-group is-horizontal has-divide">
   <div class="checkbox-title is-filled">
     checkbox title
   </div>
@@ -67,7 +67,7 @@
     <input type="checkbox">
     <span>check me</span>
   </label>
-</div></script></div><div class="block"><div class="block">checkbox-group is-inline-group is-bordered is-[color]</div><div class="block"><div class="checkbox-group is-inline-group is-bordered is-primary"><div class="checkbox-title is-filled">checkbox title</div><label class="checkbox"><input type="checkbox"> <span>check me</span></label> <label class="checkbox"><input type="checkbox"> <span>check me</span></label></div></div><script type="text/plain" class="language-markup"><div class="checkbox-group is-inline-group is-bordered has-primary">
+</div></script></div><div class="block"><div class="block">checkbox-group is-horizontal is-bordered is-[color]</div><div class="block"><div class="checkbox-group is-horizontal is-bordered is-primary"><div class="checkbox-title is-filled">checkbox title</div><label class="checkbox"><input type="checkbox"> <span>check me</span></label> <label class="checkbox"><input type="checkbox"> <span>check me</span></label></div></div><script type="text/plain" class="language-markup"><div class="checkbox-group is-horizontal is-bordered has-primary">
   <div class="checkbox-title is-filled">
     checkbox title
   </div>
