--- a/app/src/helpers/spacing.scss
+++ b/app/src/helpers/spacing.scss
@@ -1,3 +1,60 @@
+// brick
+.brick {
+  @extend %brick;
+}
+
+// spacing
+.is-spacing {
+  @extend %is-spacing;
+}
+
+.is-spacing-2 {
+  @extend %is-spacing-2;
+}
+
+.is-spacing-3 {
+  @extend %is-spacing-3;
+}
+
+// horizontal
+.is-horizontal {
+  @extend %is-horizontal;
+}
+
+@include mobile {
+  .is-horizontal-mobile {
+    @include is-horizontal;
+  }
+}
+
+@include tablet {
+  .is-horizontal-tablet {
+    @include is-horizontal;
+  }
+}
+
+@include touch {
+  .is-horizontal-touch {
+    @include is-horizontal;
+  }
+}
+
+@include desktop {
+  .is-horizontal-desktop {
+    @include is-horizontal;
+  }
+}
+
+// Missing on bulma 0.9.0
+@each $property, $shortcut in $spacing-shortcuts {
+  @each $name, $value in $spacing-values {
+    // All directions
+    .#{$shortcut}-#{$name} {
+      #{$property}: $value !important;
+    }
+  }
+}
+
 // margin auto
 .push-top-auto {
   margin-top: auto !important;
